--- a/components/main/main.module.css
+++ b/components/main/main.module.css
@@ -1,11 +1,11 @@
-.contentTitle{
+.contentTitle {
   display: flex;
-width: 325px;
-flex-direction: column;
-justify-content: center;
-flex-shrink: 0;
-height: '100vh';
-margin: 0 auto;
+  width: 325px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  height: '100vh';
+  margin: 0 auto;
 }
 
 .title {
@@ -16,38 +16,42 @@ margin: 0 auto;
   font-family: Syne;
   font-weight: 800;
 }
-.info{
+
+.info {
   display: flex;
-margin: 0 auto;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-height: '100vh';
-margin: 0
-;
+  margin: 0 auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: '100vh';
+  margin: 0;
 }
-.presentation{
+
+.presentation {
   color: #999;
   font-size: 18px;
   font-family: outfit;
   text-align: center;
   width: 278px
 }
-.hola{
+
+.hola {
   color: #FFF;
   font-family: outfit;
   font-size: 18px;
   font-weight: 800;
 }
-.tecnologies{
+
+.tecnologies {
   color: #999;
-text-align: center;
-font-size: 16px;
-font-family: outfit;
-width: 312px;
-margin: 0;
+  text-align: center;
+  font-size: 16px;
+  font-family: outfit;
+  width: 312px;
+  margin: 0;
 }
-.ancor{
+
+.ancor {
   margin-top: 37px;
   display: flex;
   width: 270px;
@@ -56,18 +60,51 @@ margin: 0;
   align-items: center;
   gap: 10px;
   border-radius: 4px;
-background: #0D0D0D;
+  background: #0D0D0D;
 
-border-image: linear-gradient(to right, #5C6BC0, #C05CBC) 1;
-border-image-slice: 1;
-color: #FFF;
-font-size: 16px;
-font-family: outfit;
-font-weight: 700;
+  border-image: linear-gradient(to right, #5C6BC0, #C05CBC) 1;
+  border-image-slice: 1;
+  color: #FFF;
+  font-size: 16px;
+  font-family: outfit;
+  font-weight: 700;
 }
-.banner{
-top: 400px;
- position: fixed;
+
+.banner {
+  top: 400px;
+  position: fixed;
+
   width: auto;
   margin: 0 auto;
+
+}
+
+.carrusel {
+  top: 700px;
+
+  position: fixed;
+  height: 20px;
+}
+
+@media (min-width: 1024px) {
+  .banner {
+    position: relative;
+    top: 00px;
+    /* Ajusta el valor según tu diseño */
+    max-width: 90%;
+    /* Ajusta el ancho máximo según tu diseño */
+    margin-left: 444px;
+    transform: translateX(-50%);
+    /* Ajusta los estilos según tus necesidades */
+  }
+
+  .carrusel {
+    position: relative;
+    top: 00px;
+    height: 20px;
+  }
+
+  .img {
+    max-width: 100%;
+  }
 }
