--- a/components/projects/projects.module.css
+++ b/components/projects/projects.module.css
@@ -1,3 +1,4 @@
+
 .projects{
   color: #FFF;
   text-align: center;
@@ -5,5 +6,104 @@
   font-size: 25px;
   font-family: Syne;
   font-weight: 800;
-  margin-top: 420px;
+  margin-top: 80px;
+  padding-bottom: 33px;
+  border-bottom: 1px solid #141414;
+}
+
+.contentTitle{
+  color: #FFF;
+font-size: 22px;
+font-family: outfit;
+font-weight: 800;
+}
+.description{
+  color: #999;
+font-size: 16px;
+font-family: outfit;
+line-height: 24px;
+}
+.contentButtons{
+display: flex;
+flex-direction: row;
+align-items: center;
+gap: 16px;
+}
+.page{
+  display: flex;
+  width: 314px;
+  height: 64px;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 4px;
+background: #0D0D0D;
+  border-image: linear-gradient(to right, #5C6BC0, #C05CBC) 1;
+  border-image-slice: 1;
+  color: #FFF;
+  font-size: 16px;
+  font-family: outfit;
+  font-weight: 700; 
+}
+.github{
+  display: flex;
+width: 314px;
+height: 64px;
+padding: 20px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+flex-shrink: 0;
+border-radius: 4px;
+border: 1px solid #1F1F1F;
+background: #0D0D0D;
+color: #999;
+font-size: 16px;
+font-family: outfit;
+}
+.count{
+  color: #999;
+font-size: 16px;
+font-family: outfit;
+margin-left: 28px;
+margin-right: 28px;
+}
+.preview{
+  display: flex;
+width: 44px;
+height: 44px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+flex-shrink: 0;
+border-radius: 8px;
+border: 1px solid #1F1F1F;
+background: #0D0D0D;
+}
+.next{
+  display: flex;
+  width: 44px;
+  height: 44px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  border: 1px solid #1F1F1F;
+  background: #0D0D0D;
+}
+@media (min-width: 1024px) {
+  
+  .contentProjects{
+    width: auto;
+    height: auto;
+    margin-left: 70px;
+  }
+  .projects{
+    text-align: start;
+    margin-right: 70px;
+  }
+
 }
