--- a/components/projects/projects.module.css
+++ b/components/projects/projects.module.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+ width: 387px;
+ align-items: flex-start;
+ margin-left: 24px;;
 }
 
 .projects {
@@ -86,13 +88,13 @@
   fill: white;
 }
 
-.page:hover svg path{
-  fill: white;
-}
 .github:hover {
   border-image: linear-gradient(to right, #5C6BC0, #C05CBC) 1;
   border-image-slice: 1;
   cursor: pointer;
+  fill: white;
+}
+.page:hover svg path{
   fill: white;
 }
 .githubDesktop{
@@ -108,8 +110,8 @@
 
 .preview {
   display: flex;
-  width: 44px;
-  height: 44px;
+  width: 64px;
+  height: 64px;
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -128,8 +130,8 @@
 
 .next {
   display: flex;
-  width: 44px;
-  height: 44px;
+  width: 64px;
+  height: 64px;
   justify-content: center;
   align-items: center;
   gap: 10px;
