--- a/components/about-me/aboutme.module.css
+++ b/components/about-me/aboutme.module.css
@@ -53,6 +53,7 @@ margin-left: -16px;
   flex-direction: column;
 justify-content: center;
 align-items: center;
+gap: 30px;
 }
 .github {
   display: inline-block;
@@ -117,3 +118,19 @@ align-items: center;
   line-height: normal;
 }
 
+
+@media (min-width: 1024px) {
+  .aboutMe{
+    margin-left: 70px;
+  }
+  .description{
+    width: 990px;
+  }
+  .divButtons{
+    flex-direction: row;
+    margin-left: 70px;
+    gap: 45px;
+    justify-content: flex-start;
+    margin-top: 125px;
+  }
+}
