--- a/components/about-me/aboutme.module.css
+++ b/components/about-me/aboutme.module.css
@@ -54,6 +54,7 @@ margin-left: -16px;
 justify-content: center;
 align-items: center;
 gap: 30px;
+margin-top: 200px;
 }
 .github {
   display: inline-block;
