--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   margin-top: 210px;
+  margin-bottom: 50px;
+  gap: 43px;
 }
 .ancors {
   text-decoration: none;
