--- a/components/nav/nav.module.css
+++ b/components/nav/nav.module.css
@@ -1,37 +1,41 @@
-.navContent{
+.navContent {
   display: flex;
   align-items: center;
   height: 100px;
   justify-content: space-between;
 }
-.name{
+
+.name {
   color: #999;
-font-size: 22px;
-font-family: Montserrat;
-font-weight: 900;
-text-transform: uppercase;
-justify-content: flex-start;
-margin-left: 30px;
+  font-size: 22px;
+  font-family: Montserrat;
+  font-weight: 900;
+  text-transform: uppercase;
+  justify-content: flex-start;
+  margin-left: 30px;
 
 }
-.navContentRight{
+
+.navContentRight {
   display: none;
 }
 
 @media (min-width: 1024px) {
-  .navContentRight{
+  .navContentRight {
     display: flex;
     flex-direction: row;
-  gap: 70px;
-  align-items: center;
-  
+    gap: 70px;
+    align-items: center;
+
   }
-  .git{
+
+  .git {
     color: #999;
-  font-size: 16px;
-  font-family: outfit;
+    font-size: 16px;
+    font-family: outfit;
   }
-  .contact{
+
+  .contact {
     color: #999;
     font-size: 16px;
     font-family: outfit;
@@ -45,4 +49,61 @@ margin-left: 30px;
     border: 1px solid #0D0D0D;
     margin-right: 78px;
   }
+}
+
+.desktopOnly {
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .desktopOnly {
+    display: flex;
+  }
+}
+
+.mobileOnly {
+  display: flex;
+  background-color: #0D0D0D;
+  border: none;
+  outline: none;
+  margin-right: 20px;
+}
+
+@media (min-width: 1024px) {
+  .mobileOnly {
+    display: none;
+  }
+}
+
+/* Resto de los estilos existentes */.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #030303;
+  border-radius: 8px;
+  padding: 20px;
+  width: 300px;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+.modalContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.modalContent .git, .modalContent .contact {
+  color: #999;
+  font-size: 16px;
+  font-family: outfit;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
 }
