--- a/components/projects/projects.module.css
+++ b/components/projects/projects.module.css
@@ -42,10 +42,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 8px;
+  gap: 36px;
   width: 100%;
-  margin: 0 auto;
-  justify-content: center;
+  margin: 0 0;
+  justify-content: flex-start;
 }
 
 .page {
