--- a/components/nav/nav.module.css
+++ b/components/nav/nav.module.css
@@ -19,7 +19,14 @@
 .navContentRight {
   display: none;
 }
-
+.git:hover{
+cursor: pointer;
+color: #fafafa;
+}
+.contact:hover{
+cursor: pointer;
+color: #fafafa;
+}
 @media (min-width: 1024px) {
   .navContentRight {
     display: flex;
@@ -33,6 +40,7 @@
     color: #999;
     font-size: 16px;
     font-family: outfit;
+
   }
 
   .contact {
@@ -48,6 +56,7 @@
     border-radius: 4px;
     border: 1px solid #0D0D0D;
     margin-right: 78px;
+
   }
 }
 
