--- a/components/about-me/aboutme.module.css
+++ b/components/about-me/aboutme.module.css
@@ -1,22 +1,32 @@
-.aboutMe{
+.aboutMe {
   display: flex;
   flex-direction: column;
   margin-left: 24px;
   margin-top: 162px;
   align-items: flex-start;
   margin-bottom: 21px;
+
 }
-.aboutMeTitle{
+
+.aboutMeTitle {
   color: #FFF;
-text-align: center;
-text-shadow: 0px 0px 22px #5C6BC0;
-font-size: 16px;
-font-family: Syne;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
+
+  text-shadow: 0px 0px 22px #5C6BC0;
+  font-size: 16px;
+  font-family: Syne;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  padding-bottom: 33px;
+  border-bottom: 1px solid #141414;
+  width: calc(100% - 48px);
+  /* Resta 48px del ancho total de la pantalla (24px de margen izquierdo + 24px de margen derecho) */
+  margin-right: 24px;
+  /* Mantiene un margen de 24px a la derecha */
+
 }
-.description{
+
+.description {
   width: 325px;
   color: #999;
   font-size: 16px;
@@ -26,58 +36,61 @@ line-height: normal;
   line-height: normal;
 
 }
-.subtitle{
+
+.subtitle {
   color: #FFF;
-font-size: 22px;
-font-family: outfit;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
-margin-top: 120px;
+  font-size: 22px;
+  font-family: outfit;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  margin-top: 120px;
 }
 
-.list{
-  
+.list {
+
   display: flex;
   color: #999;
-font-size: 16px;
-font-family: outfit;
-font-style: normal;
-font-weight: 400;
-line-height: 24px;
-gap: 98px;
-margin-left: -16px;
-}
-.divButtons{
-  display: flex;
-  flex-direction: column;
-justify-content: center;
-align-items: center;
-gap: 30px;
-margin-top: 200px;
-}
-.github {
-  display: inline-block;
-    border-radius: 4px;
-    border: 1px solid #1F1F1F;
-    background: #0D0D0D;
-    display: flex;
-    width: 314px;
-    height: 64px;
-    padding: 20px;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    flex-shrink: 0;
-    color: #999;
-    font-size: 16px;
-    font-family: outfit;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  font-size: 16px;
+  font-family: outfit;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  gap: 98px;
+  margin-left: -16px;
 }
 
-.github:hover svg path{
+.divButtons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin-top: 200px;
+}
+
+.github {
+  display: inline-block;
+  border-radius: 4px;
+  border: 1px solid #1F1F1F;
+  background: #0D0D0D;
+  display: flex;
+  width: 314px;
+  height: 64px;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-shrink: 0;
+  color: #999;
+  font-size: 16px;
+  font-family: outfit;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.github:hover svg path {
   fill: white;
 }
 
@@ -88,7 +101,7 @@ margin-top: 200px;
   fill: white;
 }
 
-.linkedin:hover svg path{
+.linkedin:hover svg path {
   fill: white;
 }
 
@@ -98,7 +111,8 @@ margin-top: 200px;
   cursor: pointer;
   fill: white;
 }
-.linkedin{
+
+.linkedin {
   display: inline-block;
   border-radius: 4px;
   border: 1px solid #1F1F1F;
@@ -121,13 +135,15 @@ margin-top: 200px;
 
 
 @media (min-width: 1024px) {
-  .aboutMe{
+  .aboutMe {
     margin-left: 70px;
   }
-  .description{
+
+  .description {
     width: 990px;
   }
-  .divButtons{
+
+  .divButtons {
     flex-direction: row;
     margin-left: 70px;
     gap: 45px;
