--- a/components/projects/projects.module.css
+++ b/components/projects/projects.module.css
@@ -6,11 +6,12 @@
  align-items: flex-start;
  margin-left: 24px;
  
+ 
 }
 
 .projects {
+
   color: #FFF;
-  text-align: center;
   text-shadow: 0px 0px 28px #5C6BC0;
   font-size: 25px;
   font-family: Syne;
@@ -18,6 +19,9 @@
   margin-top: 80px;
   padding-bottom: 33px;
   border-bottom: 1px solid #141414;
+  width: calc(100% - 48px); /* Resta 48px del ancho total de la pantalla (24px de margen izquierdo + 24px de margen derecho) */
+  margin-right: 24px; /* Mantiene un margen de 24px a la derecha */
+
 }
 
 .contentTitle {
@@ -268,5 +272,14 @@ line-height: normal;
     border-image-slice: 1;
     cursor: pointer;
     color: #FFF;
+  }
+}
+.desktopOnly {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .desktopOnly {
+    display: block;
   }
 }
