--- a/components/projects/projects.module.css
+++ b/components/projects/projects.module.css
@@ -2,15 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
- width: 387px;
+ width: auto;
  align-items: flex-start;
  margin-left: 24px;
- 
  
 }
 
 .projects {
-
   color: #FFF;
   text-shadow: 0px 0px 28px #5C6BC0;
   font-size: 25px;
@@ -46,7 +44,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 36px;
+  gap: 20px;
   width: 100%;
   margin: 0 0;
   justify-content: flex-start;
@@ -175,13 +173,17 @@
   object-fit: cover;
   /* Ajusta el tipo de ajuste según tus necesidades */
 }
-
+.carouselImageDesk{
+  display: none;
+}
 .imgInactive {
   opacity: 0.5;
 }
 
 @media (min-width: 1024px) {
-
+  .carouselImageDesk{
+    display: flex;
+  }
   .contentProjects {
     width: auto;
     height: auto;
