--- a/components/nav/nav.module.css
+++ b/components/nav/nav.module.css
@@ -98,12 +98,14 @@ color: #fafafa;
   width: 300px;
   margin: 0 auto;
   margin-top: 100px;
+  overflow: hidden;
 }
 .modalContent {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
+
 }
 
 .modalContent .git, .modalContent .contact {
