--- a/components/carousel/carousel.module.css
+++ b/components/carousel/carousel.module.css
@@ -23,7 +23,7 @@
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   transform-origin: center;
-  transition: 2S;
+  transition: 2s;
   
 }
 .ultimo{
